--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <title>Eatery</title>
   </head>
   <body>
     <div>
@@ -10,5 +10,6 @@
       <hr>
       <h1>Hello {{yourName}}!</h1>
     </div>
+    <script src="../public/assets/bundle.js"></script>
   </body>
 </html>
