--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
       <hr>
       <h1>Hello {{yourName}}!</h1>
     </div>
-    <script src="../public/assets/bundle.js"></script>
+    <script src="/assets/bundle.js"></script>
   </body>
 </html>
