Move geolocation functionality to button component

--- a/frontend/js/home/home.html
+++ b/frontend/js/home/home.html
@@ -1,5 +1,6 @@
 <div class="home-page">
-
-  <h1>Homeeeee</h1>
+  
+  <h1>Click here to find Restaurants nearby!</h1><start-btn></start-btn>
+  <p>Please click "Allow" when the browser asks you about your location, so we can make things easier for you :)</p>
 
 </div>
