Add start button component

--- a/frontend/js/home/home.html
+++ b/frontend/js/home/home.html
@@ -1,6 +1,15 @@
-<div class="home-page">
-  
-  <h1>Click here to find Restaurants nearby!</h1><start-btn></start-btn>
-  <p>Please click "Allow" when the browser asks you about your location, so we can make things easier for you :)</p>
+<md-content
+  flex="grow"
+  layout-padding
+  layout="row"
+  layout-align="space-around-center"
+  class='mid-layout'
+  style="background: #ffb74d url(https://images.pexels.com/photos/349609/pexels-photo-349609.jpeg?w=1260&h=1000&auto=compress&cs=tinysrgb) no-repeat center">
 
-</div>
+  <div class="home-page">
+
+    <h1>Click here to find Restaurants nearby!</h1><start-btn></start-btn>
+    <p>Please click "Allow" when the browser asks you about your location, so we can make things easier for you :)</p>
+
+  </div>
+</md-content>
