Add google maps and create markers with restaurants nearby

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Eatery</title>
+    <!-- Don't have the time to hide the key now -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3mYY1weLA82Czf30qMbMIouPlUc3Yf2Y&libraries=places"></script>
   </head>
   <body>
     <div ui-view></div>
