--- a/frontend/js/restaurants/show.html
+++ b/frontend/js/restaurants/show.html
@@ -1,30 +1,51 @@
 <md-content class="md-padding" layout="row">
-  <md-card flex="fill">
-    <md-card-title>
-      <md-card-title-text>
-        <span class="md-headline">{{$ctrl.restaurants.restaurant.name}}</span>
-        <span class="md-subhead">{{$ctrl.restaurants.restaurant.vicinity}}</span>
-      </md-card-title-text>
-    </md-card-title>
-    <md-card-content layout="row" layout-align="space-between">
-      <div class="md-media-xl card-media" style="height: 410px;">
-        <img ng-src="http://www.foodista.com/sites/default/files/default_images/placeholder_rev.png"/>
-      </div>
-    </md-card-content>
-    <md-card-content>
-      <md-list class="md-dense" flex>
-        <md-list-item class="md-3-line" ng-show="!$ctrl.restaurants.restaurant.reviews.length">
-          <div class="md-list-item-text" layout="column">
-            <h1>No reviews yet!</h1>
+  <md-card flex="100">
+    <div flex="50">
+      <md-card-title>
+        <md-card-title-text>
+          <span class="md-headline">{{$ctrl.restaurants.restaurant.name}}</span>
+          <span class="md-subhead">{{$ctrl.restaurants.restaurant.vicinity}}</span>
+        </md-card-title-text>
+      </md-card-title>
+      <md-card-content layout="row" layout-align="space-between">
+        <div class="md-media-xl card-media">
+          <img height="220px" ng-src="http://www.foodista.com/sites/default/files/default_images/placeholder_rev.png"/>
+        </div>
+      </md-card-content>
+      <md-card-content>
+        <h1>Reviews</h1>
+        <md-list class="md-dense" flex>
+          <md-list-item class="md-3-line" ng-show="!$ctrl.restaurants.restaurant.reviews.length">
+            <div class="md-list-item-text" layout="column">
+              <h1>No reviews yet!</h1>
+            </div>
+          </md-list-item>
+          <md-list-item class="md-3-line" ng-repeat="review in $ctrl.restaurants.restaurant.reviews">
+            <div class="md-list-item-text" layout="column">
+              <h2>Score: {{ review.score }}</h2>
+              <h3>{{ review.description }}</h3>
+              <h4>By {{ review.author }}</h5>
+            </div>
+          </md-list-item>
+          <md-divider ></md-divider>
+        </md-list>
+      </md-card-content>
+    </div>
+    <div flex="50">
+      <md-content show-authed='true'>
+        <h1>Write a review</h1>
+        <form ng-submit="$ctrl.postReview()">
+          <fieldset ng-disabled="$ctrl.isSubmitting">
+            <md-input-container class="md-block">
+              <label>Review</label>
+              <input ng-model="$ctrl.formData.review" md-maxlength="80" rows="2" md-select-on-focus>
+            </md-input-container>
+          </fieldset>
+          <div>
+            <md-button class="md-warn md-raised" type="submit">Submit</md-button>
           </div>
-        </md-list-item>
-        <md-list-item class="md-3-line" ng-repeat="review in $ctrl.restaurants.restaurant.reviews">
-          <div class="md-list-item-text" layout="column">
-            <h3>{{ review }}</h3>
-          </div>
-        </md-list-item>
-        <md-divider ></md-divider>
-      </md-list>
-    </md-card-content>
+        </form>
+      </md-content>
+    </div>
   </md-card>
 </md-content>
